our index page is now showing

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -1,8 +1,22 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div>
 
-
+    <h2>Recently added books</h2>
+        {% if post_list %}
+        <ul class="list flex-wrap b--solid bg-gray ">
+            {% for post in post_list %}
+                <li class="b--solid ma1 bg-light-yellow">
+                    {{ post.title }}
+                
+                </li>
+            {% endfor %}
+        </ul>
+        {% else %}
+        <p>There are no books on the site.</p> 
+        {% endif %}
+</div>
 
 
 
