worked on models and views and added some content to local database

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div>
 
-    <h2>Recently added books</h2>
+    <h2>Recently added posts</h2>
         {% if post_list %}
         <ul class="list flex-wrap b--solid bg-gray ">
             {% for post in post_list %}
@@ -14,7 +14,7 @@
             {% endfor %}
         </ul>
         {% else %}
-        <p>There are no books on the site.</p> 
+        <p>There are no posts on the site.</p> 
         {% endif %}
 </div>
 
