--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -8,7 +8,7 @@
         <ul class="list flex-wrap b--solid bg-gray ">
             {% for post in post_list %}
                 <li class="b--solid ma1 bg-light-yellow">
-                    {{ post.title }}
+                    <a href="{% url 'post_detail' slug=post.slug %}">{{ post.title }}</a>
                 
                 </li>
             {% endfor %}
