Worked on Post_Detail_view and fixed rrors with Models

--- a/core/templates/core/post_details.html
+++ b/core/templates/core/post_details.html
@@ -1,8 +1,26 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div>
+    <div>
+        {{ post.title }}
+        {{ post.user }}
+        {{  }}
+    </div>
+    <div>
 
+    </div>
+</div>
+<div>
+    <ul class="list flex-wrap b--solid bg-gray ">
+        <!-- This will be the loop for the comments -->
+            <li>
+                
 
+            </li>
+        <!-- This will end the comments for loop -->
+    </ul>
+</div>
 
 
 {% endblock %}
