--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -7,11 +7,16 @@
         {% if post_list %}
         <ul class="list flex-wrap b--solid bg-gray ">
             {% for post in post_list %}
-                <li class="b--solid ma1 bg-light-yellow">
-                    <a href="{% url 'post_detail' slug=post.slug %}">{{ post.title }}</a>
-                    {{ post.description }}
-                    {{ post.date_posted }}
-                    {{ post.user }}
+                <li class="b--solid ma1 bg-light-yellow flex flex-wrap justify-between">
+                    <div class="w-100">
+                    <a class=" ml2 w-30 f3" href="{% url 'post_detail' slug=post.slug %}">{{ post.title }}</a>
+                    <a class="w-two-thirds" target="_blank" href="{{ post.post_url }}">{{ post.post_url|truncatechars:20 }}</a>
+                    </div>
+                    <div class="flex ml2">
+                    <p class="ml2 mr2">{{ post.description }}</p>
+                    <p class="ml2 mr2">{{ post.date_posted }}</p>
+                    <p class="ml2 mr2">{{ post.user }}</p>
+                    </div>
                 </li>
             {% endfor %}
         </ul>
