Added additional styling and changed home button layout

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -9,9 +9,11 @@
 </head>
 <body>
     <div class="georgia">
-      <div>
-          <h1><a href="{% url 'index'%}">Scitech Forums</a></h1>
-        
+      <div class="bb bg-silver">
+          <a class="ma2 dib" href="{% url 'index'%}">Scitech Forums Home</a>
+          <div class="dib">
+            <h3>Scitech Forums</h3>
+          </div>
       </div>
       
       <div>
