--- a/core/templates/core/post_details.html
+++ b/core/templates/core/post_details.html
@@ -14,10 +14,14 @@
     </div>
 </div>
 <div>
-    <ul class="list flex-wrap b--solid bg-gray avenir">
+    <ul class="list b--solid bg-silver avenir">
         <!-- This will be the loop for the comments -->
-            <li>
-                
+            <li class="ba bw1 br2 pa2 ma2 avenir bg-white">
+                <p>This is my comment that doesn't exist</p>
+
+            </li>
+            <li class="ba bw1 br2 pa2 ma2 avenir bg-white">
+                <p>This is my comment that doesn't exist</p>
 
             </li>
         <!-- This will end the comments for loop -->
