--- a/core/templates/core/comment_add.html
+++ b/core/templates/core/comment_add.html
@@ -1,6 +1,10 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h2>Add your comment here</h2>
-    
+    <h3>This page will contain the comment form.</h3>
+    <form method="POST" class="post-form">{% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit" class="save btn btn-default">Save</button>
+    </form>
+
 {% endblock %}
