--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -11,16 +11,17 @@
                 <li class="b--solid ma1 bg-light-yellow list justify-between">
                     <div class="w-100">
                     <a class=" ml2 w-30 f3 black" href="{% url 'post_detail' slug=post.slug %}">{{ post.title }}</a>
-                    <a class="w-two-thirds dim blue" target="_blank" href="{{ post.post_url }}">Check it out!</a>
+                    <a class="w-two-thirds dim blue" target="_blank" href="{{ post.post_url }}">{{ post.post_url }}</a>
                     </div>
                     <div class="flex ml2">
                     <p class="ml2 w-100">{{ post.description }}</p>
                     <p class="ml2 mr2 ">{{ post.date_posted }}</p>
                     <p class="ml2 mr2 ">{{ post.user }}</p>
+                    <p class="ml2 mr2">{{ post.comment_set.count }} comment(s)</p>
                     </div>
                     
 
-                    {{ post.voted_by.count }}
+                    <p class="ml2 mr2">This post has {{ post.voted_by.count }} vote(s)!</p>
                     
                 </li>
             {% endfor %}
