--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Scitech Forums {% block title %}{% endblock %}</title>
+  <title>SciTech Forums {% block title %}{% endblock %}</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"/>
+  <!-- CSS CUSTOM -->
   {% block meta %}{% endblock %}
 </head>
-<body>
+<body class="bg-green">
     <div class="georgia">
-      <div class="bb bg-silver">
-          <a class="ma2 dib" href="{% url 'index'%}">Scitech Forums Home</a>
+      <div class="bg-green">
+          <a class="ma2 dib black" href="{% url 'index'%}">Home</a>
           <div class="dib">
-            <h3>Scitech Forums</h3>
+            <h3 class="white">SciTech Forums</h3>
           </div>
-      <div class="flex justify-between ma3">
-          <h1><a class="blue dim f1"href="{% url 'index'%}">Scitech Forums</a></h1>
+      <div class="flex justify-between ma3 fr">
           <div class="flex items-center">
           {% if request.user.is_authenticated %}
-          <p class="mr2"><a class="blue dim f4" href="{% url 'index' %}">{{ request.user }}</a></p>
+          <p class="mr2"><a class="dim f4 black" href="{% url 'index' %}">{{ request.user }}</a></p>
           <p class="mr2">|</p>
-          <p class="mr2"><a class="blue dim f4" href="{% url 'auth_logout' %}?next=/core/">Logout</a></p>
+          <p class="mr2"><a class="dim f4 black" href="{% url 'auth_logout' %}?next=/core/">Logout</a></p>
           {% else %}
-          <p class="mr2"><a class="blue dim f4" href="{% url 'auth_login' %}">Login</a></p>
+          <p class="mr2"><a class="dim f4 black" href="{% url 'auth_login' %}">Login</a></p>
           <p class="mr2">|</p>
-          <p class="mr2"><a class="blue dim f4" href="{% url 'registration_register' %}">Register</a></p>
+          <p class="mr2"><a class="dim f4 black" href="{% url 'registration_register' %}">Register</a></p>
           {% endif %}
           </div>
       </div>
@@ -32,6 +32,7 @@
       <div>
         <div>{% block content %}{% endblock %}</div>
       </div>
+    </div>
     </div>
 </body>
 </html>
