--- a/core/templates/core/comment_add.html
+++ b/core/templates/core/comment_add.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h3>This page will contain the comment form.</h3>
+    <h3>Post a comment</h3>
     <form method="POST" class="post-form">{% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="save btn btn-default">Save</button>
