made a few more tweaks to style as well as some functionality

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -9,7 +9,7 @@
   {% block meta %}{% endblock %}
 </head>
 <body class="bg-green">
-    <div class="georgia">
+    <div class="avenir">
       <div class="bg-green">
           <a class="ma2 dib black" href="{% url 'index'%}">Home</a>
           <div class="dib">
