--- a/core/templates/core/comment_add.html
+++ b/core/templates/core/comment_add.html
@@ -4,7 +4,7 @@
     <h3>Post a comment</h3>
     <form method="POST" class="post-form">{% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="save btn btn-default">Save</button>
+        <button type="submit">Save</button>
     </form>
 
 {% endblock %}
